@@ -3,6 +3,7 @@ Revision history for Getopt-Long
 {{$NEXT}}
     - Parse explicit parameter formats early
     - Don't allow proto subs to be pre-parsed
+    - Only throw Getopt::Long::Exceptionals
 
 0.1.2  2019-06-08T15:32:25+02:00
     - Add support for Complex parameters
